# azkar

./: .gitignore  CHANGELOG.md  README.md  git_log.txt  package-lock.json  package.json
.github/workflows/: release.yml
apps/desktop/: package.json
apps/desktop/flatpak/: com.azkar.app.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.microsoftstore.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: components.json  next.config.js  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/azkar/: layout.tsx  page.tsx
apps/web/app/azkar/manage/: page.tsx
apps/web/app/notification/: page.tsx
apps/web/app/privacy/: page.tsx
apps/web/components/: CategoryToggle.tsx  HtmlContent.tsx  ProgressBar.tsx  UpdateNotifier.tsx  ZekrCard.tsx  icons.tsx  landingPage.tsx  reset.tsx
apps/web/components/settings/: AppUpdateCard.tsx  AppearanceSettings.tsx  GeneralSettings.tsx
apps/web/components/ui/: button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  switch.tsx  textarea.tsx
apps/web/data/: azkar.json  evening-azkar.json  morning-azkar.json
apps/web/hooks/: useAzkar.ts  useLatestRelease.ts  useOrbitRadius.ts
apps/web/lib/: azkarStore.ts  azkarUtils.ts  notificationScheduler.ts  prayerTimes.ts  tauri.ts  updater.ts
apps/web/services/: latest-releases.ts
apps/web/types/: index.ts
flatpak/: io.github.f47.Azkar.desktop  io.github.f47.Azkar.metainfo.xml  io.github.f47.Azkar.yml
(+1 files in other folders)
