[package]
name = "azkar-app"
version = "0.1.0"
description = "Azkar Desktop App — أذكار الصباح والمساء"
authors = []
edition = "2021"

[lib]
name = "azkar_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
