[package]
name = "azkar-app"
version = "0.1.0"
description = "Azkar Desktop App — أذكار الصباح والمساء"
authors = []
edition = "2021"

[lib]
name = "azkar_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
